# science-questions

./: .gitignore  README.md  UNLICENSE
cycle-js/: README.md  index.html  index.js  package.json
haskell-servant/: LICENSE  README.md  science-questions-servant.cabal  stack.yaml
haskell-servant/src/: Lib.hs  answers.json  package.json  questions.json
purescript-express/: README.md  bower.json  package.json
purescript-express/src/: Main.purs
purescript-express/src/ScienceQuestions/: Question.purs  Token.purs  Transitions.purs
purescript-pux/: README.md  bower.json
purescript-pux/src/: Main.purs
python-data/: questions.csv  questions.py
python-flask/: README.md  answers.json  questions.json  server.py
